# ProxmoxMCP-Plus

./: .gitignore  README.md  manifest.json  pyproject.toml
src/proxmox_mcp/: server.py
src/proxmox_mcp/tools/: base.py  definitions.py  vm.py
src/proxmox_mcp/tools/console/: container_manager.py  manager.py
