[project]
name = "proxmox-mcp-plus"
version = "0.1.0"
description = "Enhanced Proxmox MCP Server"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.2.0",
    "proxmoxer>=2.0.1",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "mcpo>=0.0.17",
    "paramiko>=3.0.0,<4.0.0",
    "anyio>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proxmox_mcp"]
